hphp/hack/test/typecheck/shape/shape_structural_subtyping_allows_indexing_for_nullable_field.php
<?hh // strict

type ShapeWithNullableField = shape('a' => ?int);

function foo(ShapeWithNullableField $shape): void {
  $shape['a'];
}
